Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <p>you should add it to <code>npi</code>,</p>
 
-<pre><code>npi --add npi-regular
-npi --default npi-regular
+<pre><code>npi --add @maboiteaspam/npi-regular
+npi --default @maboiteaspam/npi-regular
 npm i @maboiteaspam/npi-regular --save-dev
 </code></pre>
 
